force-app/main/default/objects/ProfileName__mdt/ProfileName__mdt.object-meta.xml
<CustomObject>
    <label>ProfileName</label>
    <pluralLabel>ProfileNames</pluralLabel>
</CustomObject>