force-app/main/default/objects/ProfileName__mdt/fields/Profile_Metadata_API_name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Metadata_API_name__c</fullName>
    <label>Profile Metadata API name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>