force-app/main/default/objects/ProfileName__mdt/fields/Profile_Metadata_Names__c.field-meta.xml
<CustomField>
    <fullName>Profile_Metadata_Names__c</fullName>
    <label>Profile Metadata Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>