force-app/main/default/objects/ProfileName__mdt/fields/Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Profile_Name__c</fullName>
    <inlineHelpText>Profile names for the tab settings</inlineHelpText>
    <label>Profile Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>